# spatial-basis

./: README.md  pyproject.toml
docs/: README_backup.md  original_README.md  plot_basis.py  verify_hemisphere_orthonormality.py
src/spatial_basis/: __init__.py  basis.py
tests/: test_coords.py  test_linear_model.py  test_sklearn_api.py
