[project]
name = "spatial-basis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aki", email = "838013444@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
]

[project.scripts]
spatial-basis = "spatial_basis:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pandas>=2.0.0",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]
